css/main.css
/* plugins & frameworks ajustment
 */
/* bootstrap */
header.navbar {
    margin-bottom: 15px;
}
.nav-icon {
    margin : -8px 0 -8px 0 ;
    width  : 36px          ;
    height : 36px          ;
}
.dropdown-menu li div#___plus_0 {
    max-width: 50px;
}
.list-group-item {
    padding: 10px 15px;
}
.bg-color-primary > .badge {
    color: #428bca;
    background-color: #ffffff;
}
.bg-color-success > .badge {
    color: #5cb85c;
    background-color: #ffffff;
}

/* elements
 */
/* button & link */
/* text */
.limit-len {
    display          : inline-block;
    white-space      : nowrap;
    word-break       : keep-all;
    text-overflow    : ellipsis;
    -o-text-overflow : ellipsis;
    overflow         : hidden;
}
.limit-len.on-hover:hover {
    max-width: 30em;
}
.align-center {
    text-align: center;
}
/* image */


/* attributes
 */
/* margin & padding */
.margin0        { margin        : 0em   ; }
.margin1        { margin        : 1em   ; }
.margin-bottom1 { margin-bottom : 1em   ; }
.margin-right1  { margin-right  : 1em   ; }
.padding0       { padding       : 0em   ; }
.padding1       { padding       : 1em   ; }
.padding05      { padding       : 0.5em ; }
.padding-top1   { padding-top   : 1em   ; }
/* zindex */
.minz-index { z-index: 0   ; }
.maxz-index { z-index: 1500; }
/* length */
.len3  { max-width: 3em ; }
.len4  { max-width: 4em ; }
.len5  { max-width: 5em ; }
.len7  { max-width: 7em ; }
.len9  { max-width: 9em ; }
.len12 { max-width: 12em; }
/* size */
.w100      { width : 100px ;                 }
.h2em      { height: 2em   ;                 }
.w320-h240 { width : 320px ; height: 240px ; }
.w128-h128 { width : 128px ; height: 128px ; }
.w500-h300 { width : 500px ; height: 300px ; }
.w100per   { width : 100%  ; }
.w5per     { width : 5%    ; }
.w10per    { width : 10%   ; }
.w15per    { width : 15%   ; }
.w20per    { width : 20%   ; }
.w30per    { width : 30%   ; }
.w33per    { width : 33%   ; }
.w45per    { width : 45%   ; }
.w80per    { width : 80%   ; }
/* color */
.color-d   { color: #ddd;}
.color-fee { color: #fee;}
.color-f00 { color: #f00;}
.color-efe { color: #efe;}
/* background-color */
.bg-color-d   { background-color: #ddd; }
.bg-color-f   { background-color: #fff; }
.bg-color-fee { background-color: #fee; }
.bg-color-efe { background-color: #efe; }

.bg-color-primary {
    background-color : #428bca;
    border-color     : #428bca;
    color            : #ffffff;
}
.bg-color-primary:hover {
    color            : #ffffff;
}
.bg-color-success {
    background-color : #5cb85c;
    border-color     : #5cb85c;
    color            : #ffffff;
}
.bg-color-success:hover {
    color            : #ffffff;
    background-color : #4cae4c;
    border-color     : #449d44;
}

/* border radius */
.border-r-1  { border-radius: 1em  }
.border-r-05 { border-radius: .5em }

.permission-0,
.permission-1,
.permission-2,
.permission-3,
.permission-4,
.permission-5 {
    color : #ffffff;
}
.permission-0 { background-color : #5cb85c; }
.permission-1 { background-color : #5bc0de; }
.permission-2 { background-color : #428bca; }
.permission-3 { background-color : #f0ad4e; }
.permission-4 { background-color : #d9534f; }
.permission-5 { background-color : #474949; }

/* float */
.float-right { float: right; }

